# FBI

./: README.md  pyproject.toml
FBI/: .gitignore  extras.py  fitacf.py  grid.py  plotting_example.py  process.py  process_example.py  readwrite.py  utils.py
FBI/plotting/: axis.py  plot.py  plot_main.py
tmp/: Kp_ap_1940.txt  index.html
