[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "FBI"
dynamic = ["version"]
# Note: To install, must specify one of [local] or [from_github]
dependencies = [
    "ray",
    "numpy",
    "apexpy",
    "spaceweather",
    "h5py",
    "matplotlib",
    "cartopy",
    "geodarn @ git+https://github.com/billetd/geodarn.git@main",
    "pydarn <= 4.0",
    "pydarnio @ git+https://github.com/billetd/pyDARNio@borealis_v0.7",
    "lompe[deps-from-github,extras] @ git+https://github.com/billetd/lompe.git@main",
]

[project.optional-dependencies]
# For the case where you have already installed these locally
#  (e.g. with a --editable install)
local = [
]
# To use the online versions instead
deps-from-github = [
]
extras = [
]
dev = [
]

[tool.setuptools.packages.find]
where = ["."]
include = ["FBI"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = [
    "tests",
]
