[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "FBI"
dynamic = ["version"]
# Note: To install, must specify one of [local] or [from_github]
dependencies = [
    "ray",
    "numpy < 2.3.0",
    "apexpy @ git+https://github.com/aburrell/apexpy@develop",
    "spaceweather",
    "h5py",
    "matplotlib",
    "cartopy",
    "geodarn @ git+https://github.com/billetd/geodarn.git@main",
    "pydarn @ git+https://github.com/SuperDARN/pydarn@develop",
    "pydarnio",
    "lompe @ git+https://github.com/billetd/lompe.git@main",
    "dipole @ git+https://github.com/klaundal/dipole.git@main#egg=dipole",
    "polplot @ git+https://github.com/klaundal/polplot.git@main#egg=polplot",
    "secsy @ git+https://github.com/klaundal/secsy.git@main#egg=secsy",
]

[project.optional-dependencies]
# For the case where you have already installed these locally
#  (e.g. with a --editable install)
local = [
]
# To use the online versions instead
deps-from-github = [
]
extras = [
]
dev = [
]

[tool.setuptools.packages.find]
where = ["."]
include = ["FBI"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = [
    "tests",
]
